get_peliculas completo

--- a/microservicios/restapi_postgresql/.env
+++ b/microservicios/restapi_postgresql/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=admin
 PGSQL_HOST=localhost
-PGSQL_USER=postgresql
+PGSQL_USER=postgres
 PGSQL_PASSWORD=lenin
 PGSQL_DATABASE=python-flask
